# GifOptimation

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/org/zzy/gifoptimation/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/org/zzy/gifoptimation/: MainActivity.java  TestActivity.java
app/src/main/java/org/zzy/gifoptimation/glide/decoder/: GifDecoder.java  GifResource.java
app/src/main/java/org/zzy/gifoptimation/glide/extension/: GlideExtensions.java  GlideGifModule.java
app/src/main/res/layout/: activity_main.xml  activity_test.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/org/zzy/gifoptimation/: ExampleUnitTest.java
gif_optimation/: build.gradle
gif_optimation/src/androidTest/java/org/zzy/gif/lib/: ExampleInstrumentedTest.java
gif_optimation/src/main/: AndroidManifest.xml
gif_optimation/src/main/cpp/: CMakeLists.txt
gif_optimation/src/main/cpp/giflib/: gif_lib.h
gif_optimation/src/main/cpp/utils/: log.h  math.h
gif_optimation/src/main/java/android/support/rastermill/: FrameSequence.java  FrameSequenceDrawable.java
gif_optimation/src/test/java/org/zzy/gif/lib/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
